--- a/index.html
+++ b/index.html
@@ -18,31 +18,49 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a class="logo1" href="index.html"><img src="files/miproyecto.png" alt="logoressia"></a>
-                <ul>
-                    <li><a href="index.html">INICIO</a></li>
-                    <li><a href="pages/alquiler.html">PROPIEDADES EN ALQUILER</a></li>
-                    <li><a href="pages/venta.html">PROPIEDADES EN VENTA</a></li>
-                    <li><a href="pages/redes.html">REDES SOCIALES</a></li>
-                    <li><a href="pages/sucursales.html">SUCURSALES</a></li>
-                </ul>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="logo1" href="./index.html"><img src="./files/miproyecto.png" alt="logoressia"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="responsiveUL collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="active" aria-current="page" href="./index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="" href="./pages/alquiler.html">PROPIEDADES EN ALQUILER</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="" href="./pages/venta.html">PROPIEDADES EN VENTA</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="" href="./pages/redes.html">REDES SOCIALES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="" href="./pages/sucursales.html">SUCURSALES</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-        <div class="divmain">
-            <main>
-                <h1>MUDARTE NUNCA FUE TAN FÁCIL</h1>
-            </main>
-        </div>
+    <div class="divmain">
+        <main>
+            <h1>MUDARTE NUNCA FUE TAN FÁCIL</h1>
+        </main>
+    </div>
+
         <section class="fondo">
             <article>
                 <h3>REALIZAMOS:</h3>
-                    <ul>
-                        <li>Tasación de tus inmuebles</li>
-                        <li>Venta y alquiler de propiedades</li>
-                        <li>Administración del alquiler</li>
-                        <li>Contratos de inmuebles</li>
-                    </ul>
+                <ul>
+                    <li>Tasación de tus inmuebles</li>
+                    <li>Venta y alquiler de propiedades</li>
+                    <li>Administración del alquiler</li>
+                    <li>Contratos de inmuebles</li>
+                </ul>
             </article>
         </section>
     <footer>
