--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -16,21 +16,43 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300&display=swap" rel="stylesheet">
 </head>
-<body class="body-s">
-    <header>
-        <nav>
+
+<header>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
             <a class="logo1" href="../index.html"><img src="../files/miproyecto.png" alt="logoressia"></a>
-                <ul>
-                    <li><a href="../index.html">INICIO</a></li>
-                    <li><a href="alquiler.html">PROPIEDADES EN ALQUILER</a></li>
-                    <li><a href="venta.html">PROPIEDADES EN VENTA</a></li>
-                    <li><a href="redes.html">REDES SOCIALES</a></li>
-                    <li><a href="sucursales.html">SUCURSALES</a></li">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="responsiveUL collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="../index.html">INICIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="" href="./alquiler.html">PROPIEDADES EN ALQUILER</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./venta.html">PROPIEDADES EN VENTA</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="" href="./redes.html">REDES SOCIALES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="active" aria-current="page" href="./sucursales.html">SUCURSALES</a>
+                    </li>
                 </ul>
-        </nav>
-    </header>
+            </div>
+        </div>
+    </nav>
+</header>
+
+<div class="divmain">
     <main>
+        <h1>MUDARTE NUNCA FUE TAN FÁCIL</h1>
     </main>
+</div>
+
     <section>
         <article>
         </article>
@@ -39,7 +61,7 @@
         <article>
             <div>
                 <p>SUCURSAL OLAVARRÍA (única por el momento)</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18049.206787788633!2d-60.34798710445294!3d-36.89802371279678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959445d04bf2e325%3A0xe8a9fc96fbf016b7!2sInmobiliaria%20Ressia!5e0!3m2!1ses-419!2sar!4v1683668247936!5m2!1ses-419!2sar" width="1300" height="450" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="inframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18049.206787788633!2d-60.34798710445294!3d-36.89802371279678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959445d04bf2e325%3A0xe8a9fc96fbf016b7!2sInmobiliaria%20Ressia!5e0!3m2!1ses-419!2sar!4v1683668247936!5m2!1ses-419!2sar" width="1300" height="450" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </article>
     </section>
