--- a/pages/venta.html
+++ b/pages/venta.html
@@ -18,23 +18,45 @@
 </head>
 <body class="bodyv">
     <header>
-        <nav>
-            <a class="logo1" href="../index.html"><img src="../files/miproyecto.png" alt="logoressia"></a>
-                <ul>
-                    <li><a href="../index.html">INICIO</a></li>
-                    <li><a href="alquiler.html">PROPIEDADES EN ALQUILER</a></li>
-                    <li><a href="venta.html">PROPIEDADES EN VENTA</a></li>
-                    <li><a href="redes.html">REDES SOCIALES</a></li>
-                    <li><a href="sucursales.html">SUCURSALES</a></li>
-                </ul>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="logo1" href="../index.html"><img src="../files/miproyecto.png" alt="logoressia"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="responsiveUL collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="../index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="" href="./alquiler.html">PROPIEDADES EN ALQUILER</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="active" aria-current="page" href="./venta.html">PROPIEDADES EN VENTA</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="" href="./redes.html">REDES SOCIALES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="" href="./sucursales.html">SUCURSALES</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-    <main>
-        <h1>MUDARTE NUNCA FUE TAN FÁCIL</h1>
-    </main>
+
+    <div class="divmain">
+        <main>
+            <h1>MUDARTE NUNCA FUE TAN FÁCIL</h1>
+        </main>
+    </div>
+
     <section id="subtitulov">
         <h2>PROPIEDADES EN VENTA</h2>
     </section>
+
     <section class="secv">
         <article class="articlev">
             <div class="divv">
@@ -100,6 +122,7 @@
                 </div>
             </article>
     </section>
+    
     <footer>
         <div class="divfooter">
             <p>Olavarría, Buenos Aires, Argentina.</p>
