--- a/index.html
+++ b/index.html
@@ -52,17 +52,18 @@
         </main>
     </div>
 
-        <section class="fondo">
-            <article>
-                <h3>REALIZAMOS:</h3>
-                <ul>
-                    <li>Tasación de tus inmuebles</li>
-                    <li>Venta y alquiler de propiedades</li>
-                    <li>Administración del alquiler</li>
-                    <li>Contratos de inmuebles</li>
-                </ul>
-            </article>
-        </section>
+    <section class="fondoMain">
+        <article>
+            <h3>REALIZAMOS:</h3>
+            <ul>
+                <li>Tasación de tus inmuebles</li>
+                <li>Venta y alquiler de propiedades</li>
+                <li>Administración del alquiler</li>
+                <li>Contratos de inmuebles</li>
+            </ul>
+        </article>
+    </section>
+
     <footer>
         <div class="divfooter">
             <p>Olavarría, Buenos Aires, Argentina.</p>
