--- a/pages/alquiler.html
+++ b/pages/alquiler.html
@@ -53,7 +53,7 @@
         </main>
     </div>
 
-    <section id="subtituloa">
+    <section class="subtituloa">
         <h2>PROPIEDADES EN ALQUILER</h2>
     </section>
     <section class="seca">
@@ -62,11 +62,11 @@
                 <div class="imga">
                     <div class="carda">
                         <img src="../files/casacountry.webp" alt="Imagen 1">
-                            <div class="cardcontenta">
-                                <h3>TERRIBLE CAZÓN</h3>
-                                <p>Ubicada en un country</p>
-                                <a href="#">USD$4999,9</a>
-                            </div>
+                        <div class="cardcontenta">
+                            <h3>TERRIBLE CAZÓN</h3>
+                            <p>Ubicada en un country</p>
+                            <a href="#">USD$4999,9</a>
+                        </div>
                     </div>
                 </div>
                 <div class="imga">
