--- a/pages/venta.html
+++ b/pages/venta.html
@@ -53,7 +53,7 @@
         </main>
     </div>
 
-    <section id="subtitulov">
+    <section class="subtitulov">
         <h2>PROPIEDADES EN VENTA</h2>
     </section>
 
