--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content=
+    "Somos líderes en el sector inmobiliario con más de 15 años de experiencia. Nuestra trayectoria demuestra nuestro compromiso y éxito en brindar servicios de alta calidad. Con un enfoque innovador y un equipo altamente capacitado, hemos establecido relaciones sólidas y satisfecho las necesidades de nuestros clientes. Ya sea para comprar, vender o alquilar propiedades, contamos con una amplia cartera y el conocimiento necesario para brindar soluciones efectivas. Nuestro objetivo es superar las expectativas y continuar liderando el mercado inmobiliario con excelencia y profesionalismo.">
+    <meta name="keywords" content="inmobiliaria, alquilar casa, comprar casa, tasacion, propiedades, casa en venta, compra propiedad, departamentos, casa en alquiler, departamento, caja de carton en venta y alquiler">
     <title>Inmobiliaria Ressia</title>
     <link rel="shortcut icon" href="files/miproyecto.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
