--- a/pages/alquiler.html
+++ b/pages/alquiler.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="
+    Amplia selección de propiedades en alquiler. ¡Ofrecenos tu propiedad y unite a nuestro catálogo! Contamos con opciones para todos los gustos y necesidades. ¡Confiá en nosotros para encontrar el lugar perfecto para vos!">
+    <meta name="keywords" content="propiedades en alquiler, alquilar casa, casa en alquiler, alquilar departamento, departamento, casa, inmobiliaria alquiler">
     <title>Propiedades en alquiler</title>
     <link rel="shortcut icon" href="../files/miproyecto.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
