--- a/pages/redes.html
+++ b/pages/redes.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Seguinos en nuestras redes sociales">
+    <meta name="keywords" content="instagram inmobiliaria, facebook inmobiliaria, tiktok inmobiliaria, youtube inmobiliaria, inmobiliaria ressia, inmobiliaria ressia facebook">
     <title>Redes Sociales</title>
     <link rel="shortcut icon" href="../files/miproyecto.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
