--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">}
+    <meta name="description" content="Contamos con solo una sucursal por el momento.">
+    <meta name="keywords" content="sucursales inmobiliaria ressia, inmobiliaria ressia ubicacion, inmobiliarias, inmobiliaria ressia, ressia">
     <title>SUCURSALES</title>
     <link rel="shortcut icon" href="../files/miproyecto.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
