--- a/pages/venta.html
+++ b/pages/venta.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="
+    Compra o vende casas al mejor precio. Maximiza tu inversión inmobiliaria con nuestra experiencia y servicios profesionales. Garantizamos transacciones eficientes y resultados satisfactorios para nuestros clientes.">
+    <meta name="keywords" content="venta de casa, compra de casa, venta de propiedades, alquiler de propiedades, departamentos en venta, terreno">
     <title>Propiedades en venta</title>
     <link rel="shortcut icon" href="../files/miproyecto.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
