--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
     <meta name="keywords" content="inmobiliaria, alquilar casa, comprar casa, tasacion, propiedades, casa en venta, compra propiedad, departamentos, casa en alquiler, departamento, caja de carton en venta y alquiler">
     <title>Inmobiliaria Ressia</title>
     <link rel="shortcut icon" href="files/miproyecto.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-            crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<!-- Header de Bootstrap con modificaciones propias -->
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="logo1" href="./index.html"><img src="./files/miproyecto.png" alt="logoressia"></a>
+                <a class="logo1" href="./index.html"><img src="./files/miproyecto.png" alt="Logo de Inmobiliaria Ressia"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -42,31 +41,33 @@
                             <a class="" href="./pages/redes.html">REDES SOCIALES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="" href="./pages/sucursales.html">SUCURSALES</a>
+                            <a class="" href="./pages/contactanos.html">CONTACTANOS</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="divmain">
-        <main>
-            <h1>MUDARTE NUNCA FUE TAN FÁCIL</h1>
-        </main>
-    </div>
 
+<!-- Main -->
+    <main class="divmain">
+        <h1>MUDARTE NUNCA FUE TAN FÁCIL</h1>
+    </main>
+
+<!-- Section c/info-->
     <section class="fondoMain">
-        <article>
-            <h3>REALIZAMOS:</h3>
+        <div>
+            <h2>REALIZAMOS:</h2>
             <ul>
                 <li>Tasación de tus inmuebles</li>
                 <li>Venta y alquiler de propiedades</li>
                 <li>Administración del alquiler</li>
                 <li>Contratos de inmuebles</li>
             </ul>
-        </article>
+        </div>
     </section>
 
+<!-- Footer -->
     <footer>
         <div class="divfooter">
             <p>Olavarría, Buenos Aires, Argentina.</p>
@@ -74,5 +75,6 @@
             <p>Martillero: Alexei Ziskevich.</p>
         </div>
     </footer>
+
 </body>
 </html>
