--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Seguinos en nuestras redes sociales">
-    <meta name="keywords" content="instagram inmobiliaria, facebook inmobiliaria, tiktok inmobiliaria, youtube inmobiliaria, inmobiliaria ressia, inmobiliaria ressia facebook">
-    <title>Redes Sociales</title>
+    <meta name="description" content="Contamos con solo una sucursal por el momento.">
+    <meta name="keywords" content="sucursales inmobiliaria ressia, inmobiliaria ressia ubicacion, inmobiliarias, inmobiliaria ressia, ressia">
+    <title>Contactanos</title>
     <link rel="shortcut icon" href="../files/miproyecto.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
@@ -15,9 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300&display=swap" rel="stylesheet">
 </head>
-<body class="bodyr">
+<body class="bodyc">
 
-<!-- Header de Bootstrap con modificaciones propias -->
+    <!-- Header de Bootstrap con modificaciones propias-->
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -37,10 +37,10 @@
                             <a href="./venta.html">PROPIEDADES EN VENTA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="active" aria-current="page" href="./redes.html">REDES SOCIALES</a>
+                            <a class="" href="./redes.html">REDES SOCIALES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="" href="./contactanos.html">CONTACTANOS</a>
+                            <a class="active" aria-current="page" href="./contactanos.html">CONTACTANOS</a>
                         </li>
                     </ul>
                 </div>
@@ -48,29 +48,33 @@
         </nav>
     </header>
 
-<!-- Main -->
+    <!-- Main -->
     <main class="divmain">
         <h1>MUDARTE NUNCA FUE TAN FÁCIL</h1>
     </main>
 
-<!-- Section con el subtítulo -->
-    <section class="subtitulor">
-        <h2>SEGUINOS</h2>
+    <!-- Section subtítulo-->
+    <section class="subtituloc">
+        <h2>¿QUÉ BUSCÁS?</h2>
     </section>
-
-<!-- Section con HREF para las redes sociales -->
-    <section>
-        <div class="divr">
-            <div class="redesSociales">
-                <a href="https://www.facebook.com/" target="_blank" class="ar"><img class="facebook" src="../files/facebook.svg" alt="Seguinos en Facebook"></a>
-                <a href="https://tiktok.com/" target="_blank" class="ar"> <img class="tiktok" src="../files/tiktok.svg" alt="Seguinos en TikTok"></a>
-                <a href="https://instagram.com/" target="_blank" class="ar"><img class="insta" src="../files/instagram.svg" alt="Seguinos en Instagram"></a>
-                <a href="https://youtube.com/" target="_blank" class="ar"><img class="youtube" src="../files/youtube.svg" alt="Seguinos en YouTube"></a>
+    <!-- Section 2 c/ formulario-->
+    <section class="fondo">
+        <form> <!-- Formulario de bootstrap con modificaciones -->
+            <div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="ressia@gmail.com" required>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">¿Qué buscás?</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Comentanos que buscas" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-warning">Enviar</button>
             </div>
-        </div>
+        </form>
     </section>
 
-<!-- Footer -->
+    <!-- Footer -->
     <footer>
         <div class="divfooter">
             <p>Olavarría, Buenos Aires, Argentina.</p>
