--- a/pages/venta.html
+++ b/pages/venta.html
@@ -9,21 +9,20 @@
     <meta name="keywords" content="venta de casa, compra de casa, venta de propiedades, alquiler de propiedades, departamentos en venta, terreno">
     <title>Propiedades en venta</title>
     <link rel="shortcut icon" href="../files/miproyecto.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300&display=swap" rel="stylesheet">
 </head>
 <body class="bodyv">
+
+<!-- Header de Bootstrap con modificaciones propias -->
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="logo1" href="../index.html"><img src="../files/miproyecto.png" alt="logoressia"></a>
+                <a class="logo1" href="../index.html"><img src="../files/miproyecto.png" alt="Logo de Inmobiliaria Ressia"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -42,7 +41,7 @@
                             <a class="" href="./redes.html">REDES SOCIALES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="" href="./sucursales.html">SUCURSALES</a>
+                            <a class="" href="./contactanos.html">CONTACTANOS</a>
                         </li>
                     </ul>
                 </div>
@@ -50,22 +49,22 @@
         </nav>
     </header>
 
-    <div class="divmain">
-        <main>
-            <h1>MUDARTE NUNCA FUE TAN FÁCIL</h1>
-        </main>
-    </div>
+<!-- Main -->
+    <main class="divmain">
+        <h1>MUDARTE NUNCA FUE TAN FÁCIL</h1>
+    </main>
 
+<!-- Section subtítulo-->
     <section class="subtitulov">
         <h2>PROPIEDADES EN VENTA</h2>
     </section>
-
+<!-- Section 2 -->
     <section class="secv">
-        <article class="articlev">
+        <div class="div-v">
             <div class="divv">
                 <div class="imgv">
                     <div class="cardv">
-                        <img src="../files/casacountry.webp" alt="Imagen 1">
+                        <img src="../files/casacountry.webp" alt="Casa lujosa">
                             <div class="cardcontentv">
                                 <h3>TERRIBLE CAZÓN</h3>
                                 <p>Ubicada en un country</p>
@@ -75,7 +74,7 @@
                 </div>
                 <div class="imgv">
                     <div class="cardv">
-                        <img src="../files/casa-1.webp" alt="Imagen 2">
+                        <img src="../files/casa-1.webp" alt="Casa lujosa de barrio">
                             <div class="cardcontentv">
                                 <h3>CASA BARRIO CHETO</h3>
                                 <p>Ubicada en un barrio con buena seguridad</p>
@@ -85,7 +84,7 @@
                 </div>
                 <div class="imgv">
                     <div class="cardv">
-                        <img src="../files/clasemedia.jpg" alt="Imagen 3">
+                        <img src="../files/clasemedia.jpg" alt="Casa de clase media">
                             <div class="cardcontentv">
                                 <h3>CASA</h3>
                                 <p>Ubicada en un barrio mediopelo</p>
@@ -95,7 +94,7 @@
                 </div>
                 <div class="imgv">
                     <div class="cardv">
-                        <img src="../files/barriobajo.jpg" alt="Imagen 4">
+                        <img src="../files/barriobajo.jpg" alt="Casa de barrio bajo">
                             <div class="cardcontentv">
                                 <h3>CASA TURBIA</h3>
                                 <p>Ubicada en un barrio bajo</p>
@@ -105,7 +104,7 @@
                 </div>
                 <div class="imgv">
                     <div class="cardv">
-                        <img src="../files/casapeligro.webp" alt="Imagen 5">
+                        <img src="../files/casapeligro.webp" alt="Casa de barrio peligroso">
                             <div class="cardcontentv">
                                 <h3>CASA PELIGROSA</h3>
                                 <p>Ubicada en un barrio tomado por pandillas</p>
@@ -115,7 +114,7 @@
                 </div>
                 <div class="imgv">
                     <div class="cardv">
-                        <img src="../files/caja.jpg" alt="Imagen 6">
+                        <img src="../files/caja.jpg" alt="Caja">
                             <div class="cardcontentv">
                                 <h3>CAJA</h3>
                                 <p>Ubicada en el patio de la Inmobiliaria</p>
@@ -123,9 +122,10 @@
                             </div>
                     </div>
                 </div>
-            </article>
+            </div>
     </section>
-    
+
+<!-- Footer -->
     <footer>
         <div class="divfooter">
             <p>Olavarría, Buenos Aires, Argentina.</p>
@@ -133,5 +133,6 @@
             <p>Martillero: Alexei Ziskevich.</p>
         </div>
     </footer>
+
 </body>
 </html>
